--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/navigation_home"
+            android:id="@+id/navigation_tasks"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_task"/>
 
     <item
-            android:id="@+id/navigation_dashboard"
+            android:id="@+id/navigation_notes"
             android:icon="@drawable/ic_dashboard_black_24dp"
             android:title="@string/title_note"/>
 </menu>
