--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimaryLight">#eaffd0</color>
+    <color name="colorPrimary">#fce38a</color>
+    <color name="colorPrimaryDark">#95e1d3</color>
+    <color name="colorAccent">#f38181</color>
 </resources>
