--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,10 +4,12 @@
     <item
             android:id="@+id/navigation_tasks"
             android:icon="@drawable/ic_home_black_24dp"
+            android:iconTint="@color/colorPrimaryDark"
             android:title="@string/title_task"/>
 
     <item
             android:id="@+id/navigation_notes"
             android:icon="@drawable/ic_dashboard_black_24dp"
+            android:iconTint="@color/colorPrimaryDark"
             android:title="@string/title_note"/>
 </menu>
