--- a/app/src/main/res/layout/fragment_notes_list.xml
+++ b/app/src/main/res/layout/fragment_notes_list.xml
@@ -7,16 +7,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".notes.NotesListFragment">
 
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title_note"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-
-
-    />
-
+            android:layout_height="match_parent" android:id="@+id/recyclerView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
