--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/simple_item_view_height">
     <TextView
-            android:id="@+id/titleView"
+            android:id="@+id/descriptionView"
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
