todo checked and unchecked

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -15,7 +15,7 @@
             app:layout_constraintStart_toStartOf="parent"
     />
     <LinearLayout
-            android:id="@+id/todoContainter"
+            android:id="@+id/todoContainer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
