--- a/app/src/main/res/layout/view_todo.xml
+++ b/app/src/main/res/layout/view_todo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<pl.piotrdawidziuk.kotlinnotes02.views.TodoView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
@@ -28,4 +28,4 @@
             android:layout_marginTop="@dimen/item_margin_default"
             app:layout_constraintHorizontal_bias="0.0"
             tools:text="Hello World"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</pl.piotrdawidziuk.kotlinnotes02.views.TodoView>
