--- a/app/src/main/res/layout/view_add_button.xml
+++ b/app/src/main/res/layout/view_add_button.xml
@@ -3,12 +3,21 @@
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/item_margin_default"
+        android:background="@color/colorPrimaryDark"
+>
     <TextView
             android:id="@+id/buttonText"
             tools:text="Sample Text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/Black"/>
+            android:textColor="@color/Black"
+            android:textSize="@dimen/text_size_large"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/item_margin_small"
+            android:layout_marginBottom="@dimen/item_margin_small"
+
+    />
 
 </LinearLayout>
