--- a/app/src/main/res/layout/view_add_button.xml
+++ b/app/src/main/res/layout/view_add_button.xml
@@ -6,6 +6,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/item_margin_default"
         android:background="@color/colorPrimaryDark"
+        android:elevation="@dimen/item_elevation_default"
 >
     <TextView
             android:id="@+id/buttonText"
