--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="simple_item_view_height">128dp</dimen>
     <dimen name="item_margin_default">16dp</dimen>
     <dimen name="item_margin_small">8dp</dimen>
+    
+    <dimen name="item_elevation_default">2dp</dimen>
 
     <dimen name="text_size_xl_large">30sp</dimen>
     <dimen name="text_size_large">24sp</dimen>
