--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -7,4 +7,13 @@
         android:layout_height="match_parent"
         tools:context=".create.CreateActivity">
 
+    <TextView
+            android:id="@+id/testTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
